add script element

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>vitamin c</h1>
     <canvas id="canvas"></canvas>
+    <script src="scripts/can2.js"></script>
   </body>
 </html>
