add can.js to html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>vitamin c</h1>
     <canvas id="canvas"></canvas>
     <script src="scripts/can2.js"></script>
+    <script src="scripts/can.js"></script>
   </body>
 </html>
