change canvas id to inlineCanvas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>vitamin c</h1>
-    <canvas id="canvas"></canvas>
+    <canvas id="inlineCanvas"></canvas>
     <script src="scripts/can2.js"></script>
     <script src="scripts/can.js"></script>
   </body>
