comment can2.js out

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>vitamin c</h1>
     <canvas id="inlineCanvas"></canvas>
-    <script src="scripts/can2.js"></script>
+    <!-- <script src="scripts/can2.js"></script> -->
     <script src="scripts/can.js"></script>
   </body>
 </html>
